fixes to the podcast episodes

--- a/en/_posts/2019-04-03-thepodcast-181.md
+++ b/en/_posts/2019-04-03-thepodcast-181.md
@@ -7,11 +7,11 @@ vid: "BuDaae9nOW8"
 
 Tomorrow we‘re shipping the „beta preview“ of the future of my company. The future of [Nozbe][n]... the [Nozbe 4](https://Nozbe4.com) and in this episode of [The Podcast][p] we discuss the „when“ - how we came up with the deadline of 4/4 and how our development process of Nozbe 4 came to be.
 
-<!--More-->
-
-## Check out the short teaser:
+Watch this short teaser and listen to the entire episode below:
 
 {% include video.html id=page.vid %}
+
+<!--More-->
 
 ## [Listen to the entire episode (~ 42 min):][e]
 
