--- a/en/_posts/2019-04-04-thepodcast-182.md
+++ b/en/_posts/2019-04-04-thepodcast-182.md
@@ -7,11 +7,11 @@ vid: "rVlNwOv_wp0"
 
 This week on [The Podcast][p] we talk about WHY we’ve decided to launch [Nozbe 4](https://Nozbe.com/4) today and why it’s a big deal for the future of our company.
 
-<!--More-->
-
-## Check out the short teaser:
+Watch this short teaser and listen to the entire episode below:
 
 {% include video.html id=page.vid %}
+
+<!--More-->
 
 ## [Listen to the entire episode (~ 40 min):][e]
 
