--- a/en/_posts/2019-04-19-thepodcast-183.md
+++ b/en/_posts/2019-04-19-thepodcast-183.md
@@ -7,11 +7,11 @@ vid: "XgtS75NrbH8"
 
 This week on [The Podcast][p] we met in person on [Nozbe Reunion](https://sliwinski.com/reunion) and discussed the new [Nozbe 4](https://nozbe.com/) branding and logo... and the process and discussions (and fighting!) behind it.
 
-<!--More-->
-
-## Watch the full video:
+Watch the full video or listen to audio:
 
 {% include video.html id=page.vid %}
+
+<!--More-->
 
 ## [Listen to the entire episode (~ 38 min):][e]
 
