--- a/en/_posts/2019-05-08-thepodcast-185.md
+++ b/en/_posts/2019-05-08-thepodcast-185.md
@@ -7,11 +7,11 @@ vid: "xxXAiS93jXI"
 
 Last week on [The Podcast][p] we discussed the [book](https://sliwinski.com/reading) by Hans Rosling called “Factfullness” ([Amazon](https://www.amazon.com/dp/1250107814?tag=sliwinski-20) or [Audible](https://www.audible.com/pd/B07BFF5TQ6?tag=sliwinski-20)) and why the world is much better than we think. Check it out!
 
-<!--More-->
-
-## Check out the short teaser:
+Watch this short teaser and listen to the entire episode below:
 
 {% include video.html id=page.vid %}
+
+<!--More-->
 
 ## [Listen to the entire episode (~ 48 min):][e]
 
