--- a/en/_posts/2019-05-22-thepodcast-187.md
+++ b/en/_posts/2019-05-22-thepodcast-187.md
@@ -5,13 +5,13 @@ vid: "xdII5rDrIpo"
 
 # The Podcast #187 - Camino
 
-This week on [The Podcast][p] we discuss the pilgrimage of the Camino de Santiago which I did earlier this month with my wife to [celebrate our 40](https://sliwinski.com/forty) - and Radek had lots of questions! Listen up:
+This week on [The Podcast][p] we discuss the pilgrimage of the Camino de Santiago which I did earlier this month with my wife to [celebrate our 40](/forty/) - and Radek had lots of questions! Listen up:
 
-<!--More-->
-
-## Check out the short teaser:
+Watch this short teaser and listen to the entire episode below:
 
 {% include video.html id=page.vid %}
+
+<!--More-->
 
 ## [Listen to the entire episode (~ 46 min):][e]
 
