--- a/en/_posts/2019-05-31-thepodcast-188.md
+++ b/en/_posts/2019-05-31-thepodcast-188.md
@@ -5,13 +5,13 @@ vid: "0m6Xe10k1JM"
 
 # The Podcast #188 - Michael 4.0
 
-This week on [The Podcast][p] we discuss me turning [forty](https://sliwinski.com/forty) and as I’ve reached this milestone you’ll have me trying to share some words of wisdom:
+This week on [The Podcast][p] we discuss me turning [forty](https://sliwinski.com/forty) and as I’ve reached this milestone you’ll have me trying to share some words of wisdom.
 
-<!--More-->
-
-## Check out the short teaser:
+Watch this short teaser and listen to the entire episode below:
 
 {% include video.html id=page.vid %}
+
+<!--More-->
 
 ## [Listen to the entire episode (~ 36 min):][e]
 
