--- a/en/_posts/2019-07-03-thepodcast-189.md
+++ b/en/_posts/2019-07-03-thepodcast-189.md
@@ -7,11 +7,11 @@ vid: "Iqn99FI3Gek"
 
 Last month on [The Podcast][p] we once again met live with Radek on Apple’s Developer conference WWDC and we actually used Apple’s Podcasting studio to record our show... which was a geek-out exchange about all the new stuff Apple has presented on the conference. This time you may both watch or listen to the entire episode right here, so enjoy:
 
-<!--More-->
-
-## Watch the video:
+## Watch the full video or listen to audio:
 
 {% include video.html id=page.vid %}
+
+<!--More-->
 
 ## [Listen to the entire episode (~ 52 min):][e]
 
