--- a/en/_posts/2019-07-23-thepodcast-190.md
+++ b/en/_posts/2019-07-23-thepodcast-190.md
@@ -7,11 +7,11 @@ vid: "q71GfJ-yUm0"
 
 Recently on [The Podcast][p] I explained how I became “the webmaster” and launched not 1, not 2 but 3 web site projects. One for my children’s parents association, one for Nozbe team internally and new, Medium-free [NoOffice.org](https://nooffice.org). And we decided to take a break from podcasting for the summer. Listen up and talk to you in September:
 
-<!--More-->
-
-## Check out the short teaser:
+Watch this short teaser and listen to the entire episode below:
 
 {% include video.html id=page.vid %}
+
+<!--More-->
 
 ## [Listen to the entire episode (~ 50 min):][e]
 
