--- a/en/_posts/2019-10-11-thepodcast-191.md
+++ b/en/_posts/2019-10-11-thepodcast-191.md
@@ -7,13 +7,13 @@ vid: "XWu3PuN5N80"
 
 We’re back! After a 3-month hiatus we’re doing a quick re-cap of all the things that happened in our lives between our [The Podcast][p] recordings and from today on we’ll be back on a regular bi-weekly schedule. Many of the things we discussed today will be full-length episodes in the future, so make sure to let me know what you want us to discuss first!
 
-### Check out the short teaser:
+Watch this short teaser and listen to the entire episode below:
 
 {% include video.html id=page.vid %}
 
 <!--More-->
 
-### [Listen to the entire episode (~ 43 min):][e]
+## [Listen to the entire episode (~ 43 min):][e]
 
 <audio controls>
 <source src="https://files.nozbe.com/podcast/191.mp3" type="audio/mpeg">
