--- a/en/_posts/2019-10-23-thepodcast-192.md
+++ b/en/_posts/2019-10-23-thepodcast-192.md
@@ -7,13 +7,13 @@ vid: "rT934lUMl28"
 
 This week on [The Podcast][p] we completely went off script and instead of talking about [Nozbe Teams](https://nozbe.com/teams) Radek started complaining about fashion industry and it all went downhill from there... but I think you’ll gonna love it. Check it out!
 
-### Check out the short teaser:
+Watch this short teaser and listen to the entire episode below:
 
 {% include video.html id=page.vid %}
 
 <!--More-->
 
-### [Listen to the entire episode (~ 47 min):][e]
+## [Listen to the entire episode (~ 47 min):][e]
 
 <audio controls>
 <source src="https://files.nozbe.com/podcast/192.mp3" type="audio/mpeg">
