--- a/en/_posts/2019-11-27-thepodcast-194.md
+++ b/en/_posts/2019-11-27-thepodcast-194.md
@@ -11,7 +11,7 @@ This week on [The Podcast][p] we discuss [Nozbe Teams](https://nozbe.com/teams) 
 
 ![{{ page.title }}](/img/{{ page.img }})
 
-### [Listen to the entire episode (~ 48 min):][e]
+## [Listen to the entire episode (~ 48 min):][e]
 
 <audio controls>
 <source src="https://files.nozbe.com/podcast/194.mp3" type="audio/mpeg">
