--- a/en/_posts/2020-01-10-thepodcast-197.md
+++ b/en/_posts/2020-01-10-thepodcast-197.md
@@ -11,7 +11,7 @@ This week on [The Podcast][p] we discuss a concept of “horizontal responsibili
 
 ![{{ page.title }}](/img/{{ page.img }})
 
-### [Listen to the entire episode (~ 36 min):][e]
+## [Listen to the entire episode (~ 36 min):][e]
 
 <audio controls>
 <source src="https://files.nozbe.com/podcast/197.mp3" type="audio/mpeg">
