--- a/en/_posts/2020-02-19-thepodcast-200.md
+++ b/en/_posts/2020-02-19-thepodcast-200.md
@@ -11,7 +11,7 @@ Last week on [The Podcast][p] we celebrated the 200th episode - and to commemora
 
 ![{{ page.title }}](/img/{{ page.img }})
 
-### [Listen to the entire episode (~ 60 min):][e]
+## [Listen to the entire episode (~ 60 min):][e]
 
 <audio controls>
 <source src="https://files.nozbe.com/podcast/200.mp3" type="audio/mpeg">
