--- a/en/_posts/2020-03-13-thepodcast-202.md
+++ b/en/_posts/2020-03-13-thepodcast-202.md
@@ -11,7 +11,7 @@ Last week on [The Podcast][p] we discussed lean manufacturing and three books re
 
 ![{{ page.title }}](/img/{{ page.img }})
 
-### [Listen to the entire episode (~ 59 min):][e]
+## [Listen to the entire episode (~ 59 min):][e]
 
 <audio controls>
 <source src="https://files.nozbe.com/podcast/202.mp3" type="audio/mpeg">
