--- a/en/_posts/2020-04-06-thepodcast-205.md
+++ b/en/_posts/2020-04-06-thepodcast-205.md
@@ -11,7 +11,7 @@ Last week on [The Podcast][p] we had a discussion like no other - we tried a dif
 
 ![{{ page.title }}](/img/{{ page.img }})
 
-### [Listen to the entire episode (~ 70 min):][e]
+## [Listen to the entire episode (~ 70 min):][e]
 
 <audio controls>
 <source src="https://files.nozbe.com/podcast/205.mp3" type="audio/mpeg">
