--- a/en/_posts/2020-04-18-thepodcast-206.md
+++ b/en/_posts/2020-04-18-thepodcast-206.md
@@ -11,7 +11,7 @@ This week on [The Podcast][p] we discussed how my co-host turned from software e
 
 ![{{ page.title }}](/img/{{ page.img }})
 
-### [Listen to the entire episode (~ 61 min):][e]
+## [Listen to the entire episode (~ 61 min):][e]
 
 <audio controls>
 <source src="https://files.nozbe.com/podcast/206.mp3" type="audio/mpeg">
