--- a/en/_posts/2019-12-09-thepodcast-195.md
+++ b/en/_posts/2019-12-09-thepodcast-195.md
@@ -11,7 +11,7 @@ We met again on [Nozbe Reunion](https://sliwinski.com/reunion) and recorded [The
 
 <!--More-->
 
-### [Listen to the entire episode (~ 41 min):][e]
+## [Listen to the entire episode (~ 41 min):][e]
 
 <audio controls>
 <source src="https://files.nozbe.com/podcast/195.mp3" type="audio/mpeg">
