--- a/en/_posts/2020-01-29-thepodcast-199.md
+++ b/en/_posts/2020-01-29-thepodcast-199.md
@@ -11,7 +11,7 @@ This week on [The Podcast][p] we discuss the proper way to give and receive feed
 
 ![{{ page.title }}](/img/{{ page.img }})
 
-### [Listen to the entire episode (~ 34 min):][e]
+## [Listen to the entire episode (~ 34 min):][e]
 
 <audio controls>
 <source src="https://files.nozbe.com/podcast/199.mp3" type="audio/mpeg">
