--- a/en/_posts/2020-02-28-thepodcast-201.md
+++ b/en/_posts/2020-02-28-thepodcast-201.md
@@ -11,7 +11,7 @@ This week on [The Podcast][p] we have an explicit episode because the books that
 
 ![{{ page.title }}](/img/{{ page.img }})
 
-### [Listen to the entire episode (~ 42 min):][e]
+## [Listen to the entire episode (~ 42 min):][e]
 
 <audio controls>
 <source src="https://files.nozbe.com/podcast/201.mp3" type="audio/mpeg">
