--- a/en/_posts/2020-03-14-thepodcast-203.md
+++ b/en/_posts/2020-03-14-thepodcast-203.md
@@ -11,7 +11,7 @@ This week on [The Podcast][p] we discuss how we’re implementing lean ideas fro
 
 ![{{ page.title }}](/img/{{ page.img }})
 
-### [Listen to the entire episode (~ 60 min):][e]
+## [Listen to the entire episode (~ 60 min):][e]
 
 <audio controls>
 <source src="https://files.nozbe.com/podcast/203.mp3" type="audio/mpeg">
