--- a/en/_posts/2020-05-29-thepodcast-207.md
+++ b/en/_posts/2020-05-29-thepodcast-207.md
@@ -11,7 +11,7 @@ This week on [The Podcast][p] we are gossiping we’re talking about our favorit
 
 ![{{ page.title }}](/img/{{ page.img }})
 
-### [Listen to the entire episode (~ 41 min):][e]
+## [Listen to the entire episode (~ 41 min):][e]
 
 <audio controls>
 <source src="https://files.nozbe.com/podcast/207.mp3" type="audio/mpeg">
