Added example NT promo

--- a/en/_posts/2020-11-05-youtube.md
+++ b/en/_posts/2020-11-05-youtube.md
@@ -40,6 +40,8 @@ Lots of benefits, and the only downside is that a small portion of videos won't 
 
 [Feel free to check it out for yourself!](/yt/)
 
+Or check out [how Nozbe Teams video promo looks like embedded there](https://michael.team/yt/?yt=https://www.youtube.com/watch?v=6STLYtnQnfU).
+
 ## Siri Shortcut to "Share a video"
 
 I've also created a handy [Siri Shortcut][shortcut] that helps me share any YouTube link directly to this page!
