Updates to articles and footnotes styles

--- a/en/_posts/2020-11-19-mini.md
+++ b/en/_posts/2020-11-19-mini.md
@@ -5,7 +5,7 @@ cover: "mini.jpg"
 
 # First impressions of the ultimate cuteness - the iPhone 12 Mini
 
-As I upgrade [my iPhone](/tag/iphone) every year, I usually go with the same kind of model, just better. Three years ago I went with the iPhone X. Two years ago I had a choice between XR, XS and XS Max. I chose the natural successor - iPhone XS. Last year I went with the iPhone 11 Pro. So naturally this year I’d go for the iPhone 12 Pro, right? Well… wrong! I went with the iPhone 12 Mini![^1] Here’s why:
+As I upgrade [my iPhone](/tag/iphone) every year, I usually go with the same kind of model, just better. Three years ago I went with the iPhone X. Two years ago I had a choice between XR, XS and XS Max. I chose the natural successor - iPhone XS. Last year I went with the iPhone 11 Pro. So naturally this year I’d go for the iPhone 12 Pro, right? Well… wrong! I went with something smaller:
 
 <!--More-->
 
@@ -15,7 +15,7 @@ I'm a short person (5,4") with relatively small hands. I got used to iPhone Plus
 
 > If Apple only gave me a phone of this size but with all-screen design, I'd take it!
 
-And this is what they delivered with iPhone 12 Mini. Here's how these two compare (with the iPhone 3G for reference):
+And this is what they delivered with iPhone 12 Mini[^1]. Here's how these two compare (with the iPhone 3G for reference):
 
 ![{{ page.title }} 2](/img/mini-2.jpg)
 
