--- a/en/_posts/2020-11-12-audio.md
+++ b/en/_posts/2020-11-12-audio.md
@@ -38,6 +38,8 @@ Or just [copy and paste this link](https://feeds.transistor.fm/team-productivity
 https://feeds.transistor.fm/team-productivity-show
 {% endhighlight %}
 
+Or just **[subscribe via Apple Podcasts](https://podcasts.apple.com/us/podcast/team-productivity-show/id1538743591)**
+
 ## Thanks and hope to meet you… in your ear!
 
 I'd like to thank my [Nozbe][n] team, especially Marco and Rafal (my co-host of [No Office Podcast](/tag/noofficefm)) for making it happen and helping me convert my vlog to audio.
