fixes and shownotes

--- a/en/_posts/2018-07-05-thepodcast-151.md
+++ b/en/_posts/2018-07-05-thepodcast-151.md
@@ -25,7 +25,7 @@ Time: ~ 40 minutes
 
 And if you're new here:
 
-[check out past episodes](/tag/podcast).*
+*The Podcast is a weekly podcast chat with [Radek][r] and yours truly (we both work at [Nozbe][n]) about [productivity](/tag/productivity), [business](/tag/business), [books](/tag/books), and whatever else comes to mind… - if you liked this episode, make sure to [check out past episodes](/tag/podcast).*
 
 ## Show notes for this episode:
 
@@ -35,8 +35,8 @@ And if you're new here:
   * [The Podcast 111: Death to Paper](http://thepodcast.fm/episodes/111)
   * [The Podcast 121: Scanning & Planning](https://thepodcast.fm/121)
   * [The Podcast Table of Content](http://thepodcast.fm/toc/)
-  * [test.nozbe.com](http://test.nozbe.com/) - new (beta) version of Nozbe for all the platforms
-  * [beta-signup.nozbe.com](https://beta-signup.nozbe.com/) - sign up for beta versions of Nozbe for iOS
+  * [test.nozbe.com](http://test.nozbe.com/) \- new (beta) version of Nozbe for all the platforms
+  * [beta-signup.nozbe.com](https://beta-signup.nozbe.com/) \- sign up for beta versions of Nozbe for iOS
   * [Tadam app](http://tadamapp.com/)
   * [Productive](http://productiveapp.io/)
   * [Scanbot](https://scanbot.io/en/index.html)
