--- a/en/_posts/2018-07-12-thepodcast-152.md
+++ b/en/_posts/2018-07-12-thepodcast-152.md
@@ -27,6 +27,24 @@ And if you're new here:
 
 *The Podcast is a weekly podcast chat with [Radek][r] (VP Apple Technologies at [Nozbe][n]) and yours truly (CEO at [Nozbe][n]) about [productivity](/tag/productivity), [business](/tag/business), [books](/tag/books), and whatever else comes to mind... - if you liked this episode, make sure to [check out past episodes](/tag/podcast).*
 
+## Show notes for this episode:
+
+  * [Audio-Technica AT2005USB](https://www.amazon.com/gp/product/B007JX8O0Y)
+  * [Everything you need to know to make your 3D printer fireproof](https://www.youtube.com/watch?v=VK_K6fp4BIk)
+  * [3D printer halts and catches fire - analysis finds a surprising culprit](https://hackaday.com/2018/03/18/3d-printer-halts-and-catches-fire-analysis-finds-a-surprising-culprit/)
+  * [Prusa printers](https://www.prusa3d.com/)
+  * [thingiverse.com](https://www.thingiverse.com/)
+  * [Anet A8 3D printer](https://www.aliexpress.com/item/2016-Newest-Anet-A8-Large-Printing-Size-Precision-Reprap-Prusa-i3-DIY-3D-Printer-kit-with/32677562213.html)
+  * [25 Must-Have Anet A8 Upgrades and Mods](https://all3dp.com/1/anet-a8-upgrades-mods/)
+  * Examples of 3D models
+    * [IKEA Lack box rails](https://www.thingiverse.com/thing:2952788)
+    * [Power strip wall attachments](https://www.thingiverse.com/thing:2952783)
+    * [Magnetic Door Catch](https://www.thingiverse.com/thing:2952777)
+    * [XBOX One bluetooth controller game clip/mount](https://www.thingiverse.com/thing:1991267)
+    * [Delving Decor: Chaos Gate (28mm/Heroic scale)](https://www.thingiverse.com/thing:2471857)
+    * [SpaceX's Starman desk toy](https://www.thingiverse.com/thing:2804270)
+    * [Instax Photo Frame](https://www.thingiverse.com/thing:344307)
+
 [y]: https://www.youtube.com/channel/UCkWk8xKe3pq_87io7CXBCgQ
 [rss]: https://thepodcast.fm/episodes?format=RSS
 [e]: https://thepodcast.fm/episodes/152
