updates to podcast

--- a/en/_posts/2018-10-26-thepodcast-157.md
+++ b/en/_posts/2018-10-26-thepodcast-157.md
@@ -25,16 +25,26 @@ Time: ~ 44 minutes
 
 And if you're new here:
 
-*The Podcast is a weekly podcast chat with [Radek][r] (VP Apple Technologies at [Nozbe][n]) and yours truly (CEO at [Nozbe][n]) about [productivity](/tag/productivity), [business](/tag/business), [books](/tag/books), and whatever else comes to mind... - if you liked this episode, make sure to [check out past episodes](/tag/podcast).*
+*The Podcast is a weekly podcast chat with [Radek][r] and yours truly (we both work at [Nozbe][n]) about [productivity](/tag/productivity), [business](/tag/business), [books](/tag/books), and whatever else comes to mind… - if you liked this episode, make sure to [check out past episodes](/tag/podcast).*
 
-[y]: https://www.youtube.com/channel/UCkWk8xKe3pq_87io7CXBCgQ
-[rss]: https://thepodcast.fm/episodes?format=RSS
-[e]: https://thepodcast.fm/episodes/157
+## Show notes for this episode:
 
-[p]: https://thepodcast.fm/
-[n]: https://nozbe.com/
-[r]: https://radex.io/
-[i]: https://itunes.apple.com/podcast/the-podcast/id1012329770
-[o]: https://ipadonly.com
+  * [React Native EU conference](https://react-native.eu/)
+  * [WatermelonDB - Next-gen database for powerful React and React Native apps that scales to 10,000s of records and remains fast](https://github.com/Nozbe/WatermelonDB)
+  * [Silver Reacts](https://twitter.com/mdvacca/status/1038062043977396229)
+  * [WatermelonDB on Hacker News](https://news.ycombinator.com/item?id=17950992)
+  * [#2 trending on GH](https://mobile.twitter.com/radexp/status/1038785575057321984)
+  * [“Next-Generation React databases” (the conference talk Radek gave)](https://www.youtube.com/watch?v=UlZ1QnFF4Cw)
 
-[pm]: http://productivemag.com/
+
+
+[y]: https://michael.gratis/thepodcastyt
+[rss]: http://thepodcast.fm/episodes?format=RSS
+[e]: http://thepodcast.fm/episodes/157
+
+[p]: https://michael.gratis/thepodcastfm
+[n]: https://michael.gratis/nozbe
+[r]: https://michael.gratis/radex
+[i]: https://michael.gratis/thepodcast
+[o]: https://michael.gratis/ipadonly
+
