--- a/en/_posts/2018-10-29-thepodcast-158.md
+++ b/en/_posts/2018-10-29-thepodcast-158.md
@@ -1,5 +1,5 @@
 ---
-tags: [podcast,video]
+tags: [podcast]
 vid: "pVdvIIfwxyc"
 ---
 
@@ -27,16 +27,38 @@ Time: ~ 52 minutes
 
 And if you're new here:
 
-*The Podcast is a weekly podcast chat with [Radek][r] (VP Apple Technologies at [Nozbe][n]) and yours truly (CEO at [Nozbe][n]) about [productivity](/tag/productivity), [business](/tag/business), [books](/tag/books), and whatever else comes to mind... - if you liked this episode, make sure to [check out past episodes](/tag/podcast).*
+*The Podcast is a weekly podcast chat with [Radek][r] and yours truly (we both work at [Nozbe][n]) about [productivity](/tag/productivity), [business](/tag/business), [books](/tag/books), and whatever else comes to mind… - if you liked this episode, make sure to [check out past episodes](/tag/podcast).*
 
-[y]: https://www.youtube.com/channel/UCkWk8xKe3pq_87io7CXBCgQ
-[rss]: https://thepodcast.fm/episodes?format=RSS
-[e]: https://thepodcast.fm/episodes/158
+## Show notes for this episode:
 
-[p]: https://thepodcast.fm/
-[n]: https://nozbe.com/
-[r]: https://radex.io/
-[i]: https://itunes.apple.com/podcast/the-podcast/id1012329770
-[o]: https://ipadonly.com
+  * [Mike St.Pierre](http://www.mikestpierre.com/)
+  * [Videos from Nozbe Reunions](https://www.youtube.com/watch?v=lkIkqD1frIA&list=PL4VGcOPPsP4Oo4U07VkEJ4oZ8TzZqO5Sy)
+  * [mobiconf](https://2018.mobiconf.org/)
 
-[pm]: http://productivemag.com/
+Apps and servies mentioned:
+
+  * [Booking.com](https://www.booking.com/)
+  * [Airbnb](https://www.airbnb.com/)
+  * [Splitwise](https://www.splitwise.com/)
+
+The Podcast episodes mentioned:
+
+  * [136: Traveling with apps](https://thepodcast.fm/episodes/136) \- about Splitwise and other apps
+  * [16: I can literally touch you](https://thepodcast.fm/episodes/16)
+  * [39: Make Nozbe Great Again](https://thepodcast.fm/episodes/39)
+  * [91: Best city](https://thepodcast.fm/91)
+  * [116: App of the Reunion](https://thepodcast.fm/116)
+  * [142: Aliens among us](https://thepodcast.fm/142)
+
+
+
+[y]: https://michael.gratis/thepodcastyt
+[rss]: http://thepodcast.fm/episodes?format=RSS
+[e]: http://thepodcast.fm/episodes/158
+
+[p]: https://michael.gratis/thepodcastfm
+[n]: https://michael.gratis/nozbe
+[r]: https://michael.gratis/radex
+[i]: https://michael.gratis/thepodcast
+[o]: https://michael.gratis/ipadonly
+
